# media_server

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/logic/: init.py  mediator.py
app/settings/: config.py
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: alembic.ini
backend/app/application/api/: main.py
backend/app/application/api/user/: filters.py  handlers.py  schema.py
backend/app/domain/entities/: user.py
backend/app/domain/events/: base.py  user.py
backend/app/domain/exceptions/: base.py  user.py
backend/app/domain/values/: base.py  user.py
backend/app/infrastructure/repositories/models/: __init__.py  base.py  user.py
backend/app/infrastructure/repositories/user/: base.py  converters.py  memory.py  postgres.py
backend/app/logic/: init.py  utils.py
backend/app/logic/commands/: base.py  user.py
backend/app/logic/events/: base.py  user.py
backend/app/logic/exceptions/: base.py  mediator.py  user.py
backend/app/logic/mediator/: base.py  event.py
backend/app/logic/queries/: base.py  user.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2024_07_20_0929-f46865187c73_.py
backend/app/settings/: config.py
backend/app/tests/: conftest.py
backend/app/tests/application/: test_user.py
backend/app/tests/domain/: test_user.py
backend/app/tests/domain/values/: test_login.py  test_password.py
backend/app/tests/logic/: test_user.py
backend/app/tools/: README.md
docker-compose/: app.yml  backend.yml  frontend.yml  storages.yml
frontend/: Dockerfile
(+22 files in other folders)
